# learning_path

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  changelog.md  pyproject.toml
notebooks/: attempt_1.ipynb
src/: config.py  knowledge_graph.py  logger.py  main.py  sparql.py  visualize_graph.py  wikipedia.py  wikipedia_api.py
src/data_collection/: __init__.py  embedding_processor.py  wiki_data_service.py
src/data_collection/wikidata/: queries.py  sparql.py
src/data_collection/wikipedia_/: api.py
src/database/: chromadb.py  mongo.py  redis.py
src/embeddings/: __init__.py  service.py
src/knowledge_graph/: __init__.py  generate_kg.py  kg_service.py  knowledge_graph.py  visualize_graph.py
src/wikidata/: queries.py  sparql.py
src/wikipedia_/: api.py
