[project]
name = "learning-path"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "networkx>=3.4.2",
    "pre-commit>=4.1.0",
    "python-dotenv>=1.0.1",
    "pyvis>=0.3.2",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "setuptools>=75.8.2",
    "sparqlwrapper>=2.0.0",
    "tqdm>=4.67.1",
    "wikipedia>=1.4.0",
]
