[project]
name = "learning-path"
version = "0.1.1"
description = "Personalized learning path generator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.13",
    "beautifulsoup4>=4.13.3",
    "chromadb>=0.6.3",
    "colorlog>=6.9.0",
    "httpx>=0.28.1",
    "jupyter>=1.1.1",
    "motor>=3.7.0",
    "nbformat>=5.10.4",
    "networkx>=3.4.2",
    "numpy>=2.2.3",
    "ollama>=0.4.7",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "pre-commit>=4.1.0",
    "pymongo>=4.11.2",
    "python-dotenv>=1.0.1",
    "pyvis>=0.3.2",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "setuptools>=75.8.2",
    "sparqlwrapper>=2.0.0",
    "tqdm>=4.67.1",
    "wikipedia>=1.4.0",
]
